--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+NODE_ENV='development'
+COOKIE_DOMAIN='localhost'
+
+JWT_SECRET="eV@8pNbT%4yRc*1KwZsG5dXuQmLhJoA3"
+JWT_ACCESS_TOKEN_TTL="2h"
+JWT_REFRESH_TOKEN="7d"
+
 POSTGRES_HOST=localhost
 POSTGRES_USER=user
 POSTGRES_PASSWORD=123456
